syntax = "proto3";

package task.v1;

import "google/api/annotations.proto";
import "task/v1/model.proto";

option go_package = "task_manager/api/task/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.task.v1";
option java_outer_classname = "TaskProtoV1";

// The greeting service definition.
service Task {
  // 新建医院
  rpc CreateHospital (CreateHospitalRequest) returns (CreateHospitalReply) {
    option (google.api.http) = {
      post: "/v1/task/hospital"
      body: "*"
    };
  };
  // 注册员工
  rpc RegisterEmployee (RegisterEmployeeRequest) returns (RegisterEmployeeReply) {
    option (google.api.http) = {
      post: "/v1/task/staff"
      body: "*"
    };
  };
  // 创建任务
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskReply) {
    option (google.api.http) = {
      post: "/v1/task"
      body: "*"
    };
  };
  // 更新任务
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskReply) {
    option (google.api.http) = {
      put: "/v1/task"
      body: "*"
    };
  };
  // 分配任务
  rpc AssignTask (AssignTaskRequest) returns (AssignTaskReply) {
    option (google.api.http) = {
      put: "/v1/task/assign"
      body: "*"
    };
  };
  // 获取员工的任务列表
  rpc GetEmployeeTasks (GetEmployeeTasksRequest) returns (GetEmployeeTasksReply) {
    option (google.api.http) = {
      get: "/v1/task/staff/{employee_id}"
    };
  };
  // 获取医院的任务列表
  rpc GetHospitalTasks (GetHospitalTasksRequest) returns (GetHospitalTasksReply) {
    option (google.api.http) = {
      get: "/v1/task/hospital/{hospital_id}"
    };
  };
}

message CreateHospitalRequest {
  // 医院名称
  string name = 1;
  // 医院地址
  string address = 2;
}

message CreateHospitalReply {
  // ID
  uint32 id = 1;
}

message RegisterEmployeeRequest {
  // 员工名称
  string name = 1;
  // 医院
  uint32 hospital_id = 2;
}

message RegisterEmployeeReply {
  // ID
  uint32 id = 1;
}

message CreateTaskRequest {
  // 任务标题
  string title = 1;
  // 任务描述
  string description = 2;
  // 任务优先级
  TaskPriority priority = 3;
  // 所属医院
  uint32 hospital_id = 4;

}

message CreateTaskReply {
  // ID
  uint32 id = 1;
}

message UpdateTaskRequest {
  // 任务ID
  uint32 id = 1;
  // 任务标题
  string title = 2;
  // 任务描述
  string description = 3;
  // 任务优先级
  TaskPriority priority = 4;
  // 任务状态
  TaskStatus status = 5;
}

message UpdateTaskReply {
  // 任务
  TaskDetail task = 1;
}

message AssignTaskRequest {
  // 任务ID
  uint32 task_id = 1;
  // 员工ID
  uint32 employee_id = 2;
}

message AssignTaskReply {}

message GetEmployeeTasksRequest {
  // 员工ID
  uint32 employee_id = 1;
  // limit
  uint32 limit = 2;
  // offset
  uint32 offset = 3;
}

message GetEmployeeTasksReply {
  // 任务列表
  repeated TaskDetail tasks = 1;
  // 总数
  uint32 count = 2;
}

message GetHospitalTasksRequest {
  // 医院ID
  uint32 hospital_id = 1;
  // limit
  uint32 limit = 2;
  // offset
  uint32 offset = 3;
}

message GetHospitalTasksReply {
  // 任务列表
  repeated TaskDetail tasks = 1;
  // 总数
  uint32 count = 2;
}
